--- a/public/frontend_asset/css/style.css
+++ b/public/frontend_asset/css/style.css
@@ -1250,3 +1250,48 @@ button.owl-dot.active {
 .c-pointer {
     cursor: pointer !important;
 }
+
+/*rating*/
+.rating svg {
+    color: #c3c3c5;
+    font-size: 1rem;
+    letter-spacing: -1px;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+}
+.rating svg.hover,
+.rating svg.active,
+.text-rating {
+    color: #ffa707;
+}
+.bg-rating {
+    background-color: #ffa707;
+}
+.rating svg.half {
+    position: relative;
+}
+.rating svg.half:after {
+    position: absolute;
+    content: "\f089";
+    top: 0;
+    left: 0;
+    font-size: inherit;
+    color: #ffa707;
+    z-index: 1;
+}
+[dir="rtl"] .rating svg.half {
+    -webkit-transform: scale(-1,1);
+    transform: scale(-1,1);
+}
+.rating-sm svg {
+    font-size: 0.8125rem;
+}
+.rating-lg svg {
+    font-size: 1.125rem;
+}
+.rating-input label {
+    cursor: pointer;
+}
+.rating-input input {
+    display: none;
+}
